syntax = "proto3";

package gitaly;

option go_package = "gitlab.com/gitlab-org/gitaly/v14/proto/go/gitalypb";

import "lint.proto";
import "shared.proto";

service ObjectPoolService {
  rpc CreateObjectPool(CreateObjectPoolRequest) returns (CreateObjectPoolResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }
  rpc DeleteObjectPool(DeleteObjectPoolRequest) returns (DeleteObjectPoolResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }

  // Repositories are assumed to be stored on the same disk
  rpc LinkRepositoryToObjectPool(LinkRepositoryToObjectPoolRequest) returns (LinkRepositoryToObjectPoolResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }

  // UnlinkRepositoryFromObjectPool does not unlink the repository from the
  // object pool as you'd think, but all it really does is to remove the object
  // pool's remote pointing to the repository. And even this is a no-op given
  // that we'd try to remove the remote by the repository's `GlRepository()`
  // name, which we never create in the first place. To unlink repositories
  // from an object pool, you'd really want to execute DisconnectGitAlternates
  // to remove the repository's link to the pool's object database.
  //
  // This function is never called by anyone and highly misleading. It's thus
  // deprecated and will be removed in v14.4.
  rpc UnlinkRepositoryFromObjectPool(UnlinkRepositoryFromObjectPoolRequest) returns (UnlinkRepositoryFromObjectPoolResponse) {
    option deprecated = true;
    option (op_type) = {
      op: MUTATOR
    };
  }

  rpc ReduplicateRepository(ReduplicateRepositoryRequest) returns (ReduplicateRepositoryResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }
  rpc DisconnectGitAlternates(DisconnectGitAlternatesRequest) returns (DisconnectGitAlternatesResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }
  rpc FetchIntoObjectPool(FetchIntoObjectPoolRequest) returns (FetchIntoObjectPoolResponse) {
    option (op_type) = {
      op: MUTATOR
    };
  }
  rpc GetObjectPool(GetObjectPoolRequest) returns (GetObjectPoolResponse) {
    option (op_type) = {
      op: ACCESSOR
    };
  }
}

// Creates an object pool from the repository. The client is responsible for
// joining this pool later with this repository.
message CreateObjectPoolRequest {
  ObjectPool object_pool = 1 [(target_repository)=true];
  Repository origin = 2 [(additional_repository)=true];
}
message CreateObjectPoolResponse {}

// Removes the directory from disk, caller is responsible for leaving the object
// pool before calling this RPC
message DeleteObjectPoolRequest {
  ObjectPool object_pool = 1 [(target_repository)=true];
}
message DeleteObjectPoolResponse {}

message LinkRepositoryToObjectPoolRequest {
  ObjectPool object_pool = 1 [(additional_repository)=true];
  Repository repository = 2 [(target_repository)=true];
}
message LinkRepositoryToObjectPoolResponse {}

// This RPC doesn't require the ObjectPool as it will remove the alternates file
// from the pool participant. The caller is responsible no data loss occurs.
message UnlinkRepositoryFromObjectPoolRequest {
  Repository repository = 1 [(target_repository)=true]; // already specified as the target repo field
  ObjectPool object_pool = 2 [(additional_repository)=true];
}
message UnlinkRepositoryFromObjectPoolResponse {}

message ReduplicateRepositoryRequest {
  Repository repository = 1 [(target_repository)=true];
}
message ReduplicateRepositoryResponse {}

message DisconnectGitAlternatesRequest {
  Repository repository = 1  [(target_repository)=true];
}

message DisconnectGitAlternatesResponse {}

message FetchIntoObjectPoolRequest {
  Repository origin = 1 [(additional_repository)=true];
  ObjectPool object_pool = 2 [(target_repository)=true];
  bool repack = 3;
}
message FetchIntoObjectPoolResponse {}

message GetObjectPoolRequest {
  Repository repository = 1 [(target_repository)=true];
}

message GetObjectPoolResponse {
  ObjectPool object_pool = 1;
}


